--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -722,6 +722,8 @@
 
     <!-- TODO: Revisão manual - Container Configuration: Steam Integration (faltando) -->
     <string name="use_legacy_drm">Usar DRM legado</string>
+    <string name="unpack_files">Descompactar arquivos</string>
+    <string name="unpack_files_description">Use apenas se receber \'Application Load Error\'. Pode reduzir FPS.</string>
 
     <!-- TODO: Revisão manual - Library Status -->
     <string name="library_status_ready">Pronto</string>
