Added ability to add drives (#426)
* Added ability to add drives

* handle cancel when adding drive, fix app staying alive in background due to GOGService

---------

Co-authored-by: Utkarsh Dalal <utkarsh.dalal@toptal.com>

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -84,6 +84,8 @@
     <string name="custom_games_folders_found">%d Ordner gefunden</string>
     <string name="custom_games_scan_description">Ordner in diesen Pfaden werden nach .exe-Dateien durchsucht und als eigene Spiele gelistet. Das kann den App-Start verlangsamen.</string>
     <string name="custom_game_folder_picker_error">Ordnerpfad konnte nicht ermittelt werden</string>
+    <string name="container_config_drive_letter_missing">Laufwerksbuchstabe fehlt</string>
+    <string name="container_config_invalid_drive_path">Ungültiger Laufwerkspfad</string>
     <string name="custom_game_exe_selection_title">Auswahl erforderlich</string>
     <string name="custom_game_exe_selection_message">Für dieses Spiel gibt es mehrere ausführbare Dateien. Bitte wähle in den Einstellungen aus, welche gestartet werden soll.</string>
     <string name="custom_game_settings">Eigene Spiele-Einstellungen</string>
@@ -508,6 +510,9 @@
     <string name="environment_variables">Umgebungsvariablen</string>
     <string name="no_environment_variables">Keine Umgebungsvariablen</string>
     <string name="no_drives">Keine Laufwerke</string>
+    <string name="add_drive">Laufwerk hinzufügen</string>
+    <string name="drive_letter">Laufwerksbuchstabe</string>
+    <string name="no_available_drive_letters">Keine verfügbaren Laufwerksbuchstaben</string>
     <string name="startup_selection">Startauswahl</string>
     <string name="processor_affinity_32bit">Prozessorbindung (32-Bit-Apps)</string>
     <string name="executable_path">Pfad zur Ausführbaren Datei</string>
