--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -373,6 +373,9 @@
     <string name="environment_variables">Variáveis de Ambiente</string>
     <string name="no_environment_variables">Sem variáveis de ambiente</string>
     <string name="no_drives">Sem drives</string>
+    <string name="add_drive">Adicionar unidade</string>
+    <string name="drive_letter">Letra da unidade</string>
+    <string name="no_available_drive_letters">Nenhuma letra de unidade disponível</string>
     <string name="startup_selection">Seleção de Inicialização</string>
     <string name="processor_affinity_32bit">Afinidade de processador (apps 32-bit)</string>
     <string name="executable_path">Caminho Executável</string>
@@ -774,6 +777,8 @@
     <string name="custom_games_folders_found">%d pastas encontradas</string>
     <string name="custom_games_scan_description">As pastas nesses caminhos são verificadas em busca de arquivos .exe e listadas como jogos personalizados.</string>
     <string name="custom_game_folder_picker_error">Falha ao resolver o caminho da pasta</string>
+    <string name="container_config_drive_letter_missing">A letra da unidade está faltando</string>
+    <string name="container_config_invalid_drive_path">Caminho da unidade inválido</string>
     <string name="custom_game_exe_selection_title">Seleção de executável necessária</string>
     <string name="custom_game_exe_selection_message">Este jogo tem vários executáveis. Por favor, abra as Configurações de jogo personalizado para selecionar qual iniciar.</string>
     <string name="custom_game_settings">Configurações de jogo personalizado</string>
