--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -373,6 +373,9 @@
     <string name="environment_variables">Miljøvariabler</string>
     <string name="no_environment_variables">Ingen miljøvariabler</string>
     <string name="no_drives">Ingen drev</string>
+    <string name="add_drive">Tilføj drev</string>
+    <string name="drive_letter">Drevbogstav</string>
+    <string name="no_available_drive_letters">Ingen tilgængelige drevbogstaver</string>
     <string name="startup_selection">Opstartsvalg</string>
     <string name="processor_affinity_32bit">Processor-tilknytning (32-bit apps)</string>
     <string name="executable_path">Sti til eksekverbar fil</string>
@@ -774,6 +777,8 @@
     <string name="custom_games_folders_found">%d mapper fundet</string>
     <string name="custom_games_scan_description">Mapper i disse stier scannes for .exe-filer og vises som tilpassede spil.</string>
     <string name="custom_game_folder_picker_error">Kunne ikke løse mappesti</string>
+    <string name="container_config_drive_letter_missing">Drevbogstav mangler</string>
+    <string name="container_config_invalid_drive_path">Ugyldig drevsti</string>
     <string name="custom_game_exe_selection_title">Valg af eksekverbar fil påkrævet</string>
     <string name="custom_game_exe_selection_message">Dette spil har flere eksekverbare filer. Åbn venligst tilpassede spilindstillinger for at vælge hvilken der skal startes.</string>
     <string name="custom_game_settings">Tilpassede spilindstillinger</string>
