--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -90,6 +90,8 @@
     <string name="custom_games_folders_found">%d cartelle trovate</string>
     <string name="custom_games_scan_description">Le cartelle in questi percorsi vengono scansionate per file .exe ed elencate come giochi personalizzati. Questo potrebbe rallentare l\'avvio dell\'app.</string>
     <string name="custom_game_folder_picker_error">Impossibile risolvere il percorso della cartella</string>
+    <string name="container_config_drive_letter_missing">Manca la lettera dell\'unità</string>
+    <string name="container_config_invalid_drive_path">Percorso dell\'unità non valido</string>
     <string name="custom_game_exe_selection_title">Selezione Eseguibile Richiesta</string>
     <string name="custom_game_exe_selection_message">Questo gioco ha più eseguibili. Apri le Impostazioni Gioco Personalizzato per selezionare quale avviare.</string>
     <string name="custom_game_settings">Impostazioni Gioco Personalizzato</string>
@@ -542,6 +544,9 @@
     <string name="environment_variables">Variabili d\'Ambiente</string>
     <string name="no_environment_variables">Nessuna variabile d\'ambiente</string>
     <string name="no_drives">Nessuna unità</string>
+    <string name="add_drive">Aggiungi unità</string>
+    <string name="drive_letter">Lettera dell\'unità</string>
+    <string name="no_available_drive_letters">Nessuna lettera di unità disponibile</string>
     <string name="startup_selection">Selezione Avvio</string>
     <string name="processor_affinity_32bit">Affinità Processore (app 32-bit)</string>
     <string name="executable_path">Percorso Eseguibile</string>
