Update unpack files to run steamless on all relevant exes instead of … (#506)
* Update unpack files to run steamless on all relevant exes instead of using the dll

* Fixed manifest correlation test

---------

Co-authored-by: Utkarsh Dalal <utkarsh.dalal@toptal.com>

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -751,7 +751,7 @@
     <!-- TODO: Manual review - Container Configuration: Steam Integration (missing) -->
     <string name="use_legacy_drm">Brug ældre DRM</string>
     <string name="unpack_files">Udpak filer</string>
-    <string name="unpack_files_description">Brug kun, hvis du får \'Application Load Error\'. Kan reducere FPS.</string>
+    <string name="unpack_files_description">Brug kun, hvis du får \'Application Load Error 3:0000065432\'.</string>
 
     <!-- TODO: Manual review - Library Status -->
     <string name="library_status_ready">Klar</string>
